syntax = "proto3";

package proto;

option go_package = "github.com/hashgraph/hedera-sdk-go/proto";

option java_package = "com.hedera.hashgraph.proto";
option java_multiple_files = true;

import "proto/BasicTypes.proto";

/*
Undelete a file or smart contract that was deleted by SystemDelete; requires a Hedera administrative multisignature.
*/
message SystemUndeleteTransactionBody {
    oneof id {
        FileID fileID = 1; // The file ID to undelete, in the format used in transactions
        ContractID contractID = 2; // The contract ID instance to undelete, in the format used in transactions
    }
}
